control-panel/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-panel
  labels:
    app: control-panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control-panel
  template:
    metadata:
      labels:
        app: control-panel
    spec:
      containers:
        - name: control-panel
          image: nexus3.o-ran-sc.org:10001/o-ran-sc/nonrtric-controlpanel:2.5.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config-volume
          configMap:
            name: controlpanel-nginx-config
