control-panel/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-panel
spec:
  selector:
    app: control-panel
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8080
  type: ClusterIP
