control-panel/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: control-panel
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nrtcp.virtual33.myguest.virtualbox.org`)
      kind: Rule
      services:
        - name: control-panel
          port: 8088
